# static-site-gen

./: .gitignore  LICENSE  README.md  build.sh  main.sh  pyproject.toml
src/: blocks.py  htmlnode.py  leafnode.py  main.py  parentnode.py  parsing.py  textnode.py
tests/: test_blocks.py  test_htmlnode.py  test_leafnode.py  test_main.py  test_parentnode.py  test_parsing.py  test_textnode.py
